# superoptix

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  MANIFEST.in  README.md  SECURITY.md  index.html  install.sh  mkdocs.yml  pyproject.toml  ruff.toml  sitemap.xml  tox.ini  uv.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish-docs.yml  release.yml  ruff.yml
agent-patterns/: index.html
changelog/: index.html
contributing/: index.html
debugging-guide/: index.html
docs/: agent-patterns.md  contributing.md  environment-setup.md  faq.md  index.md  introduction.md  llm-setup.md  mission-superoptix.md  project-structure.md  quick-start.md  setup.md  superagentic-ai.md  troubleshooting.md
docs/examples/: index.md
docs/guides/: agent-development.md  agent-discovery.md  bdd.md  cicd-integration.md  claude-sdk-integration.md  cli-complete-guide.md  cloud-inference.md  conversational-interface.md  crewai-integration.md  crewai-task-optimization.md  dataset-import.md  deepagents-backends.md  deepagents-index.md  deepagents-integration.md  dspy-optimizers.md  enhanced-observability.md  evaluation-testing.md  framework-feature-matrix.md  gepa-optimization.md  golden-workflow.md  google-adk-integration.md  index.md  langfuse-integration.md  logfire-integration.md  marketplace.md  mcp-rag-complete-guide.md  memory-context-optimization.md  memory-optimization.md  memory.md  microsoft-framework-integration.md  mlflow-guide.md  model-intelligence.md  model-management.md  multi-framework.md  observability-comparison.md  observability.md  openai-sdk-integration.md  optimas-integration.md  optimization.md  orchestra-development.md  (+21 more)
docs/stylesheets/: extra.css  readthedocs-custom.css
docs/tutorials/: deepagents-backends-tutorial.md  deepagents-complete-workflow.md  first-orchestra.md  genies-agent.md  index.md  mcp-optimization.md  multi-framework-quickstart.md  openai-sdk-gepa-optimization.md  oracles-agent.md  rag-optimization.md
environment-setup/: index.html
examples/: index.html
examples/integrations/: stackone_benchmark_example.py  stackone_claude_sdk_example.py  stackone_crewai_example.py  stackone_discovery_example.py  stackone_dspy_example.py  stackone_google_adk_example.py  stackone_optimization_example.py  stackone_pydantic_ai_example.py  stackone_semantic_kernel_example.py
faq/: index.html
glossary/: index.html
guides/: index.html
guides/agent-development/: index.html
guides/agent-discovery/: index.html
guides/bdd/: index.html
guides/cicd-integration/: index.html
guides/claude-sdk-integration/: index.html
guides/cli-complete-guide/: index.html
guides/cloud-inference/: index.html
guides/conversational-interface/: index.html
guides/crewai-integration/: index.html
guides/crewai-task-optimization/: index.html
guides/dataset-import/: index.html
guides/deepagents-backends/: index.html
guides/deepagents-index/: index.html
guides/deepagents-integration/: index.html
guides/dspy-optimizers/: index.html
guides/enhanced-observability/: index.html
guides/evaluation-testing/: index.html
guides/framework-feature-matrix/: index.html
guides/gepa-optimization/: index.html
guides/golden-workflow/: index.html
guides/google-adk-integration/: index.html
guides/langfuse-integration/: index.html
guides/logfire-integration/: index.html
guides/marketplace/: index.html
guides/mcp-rag-complete-guide/: index.html
guides/memory/: index.html
guides/memory-context-optimization/: index.html
guides/memory-optimization/: index.html
guides/microsoft-framework-integration/: index.html
guides/mlflow-guide/: index.html
guides/model-intelligence/: index.html
guides/model-management/: index.html
guides/multi-framework/: index.html
guides/observability/: index.html
guides/observability-comparison/: index.html
guides/openai-sdk-integration/: index.html
guides/optimas-integration/: index.html
guides/optimization/: index.html
guides/orchestra-development/: index.html
guides/protocol-first-agents/: index.html
guides/pydantic-ai-integration/: index.html
guides/pydantic-ai-mcp-demo/: index.html
guides/rag/: index.html
guides/rails-analogy/: index.html
guides/responsible-ai/: index.html
guides/rlm-experimental/: index.html
guides/sglang-inference/: index.html
guides/stackone-claude-sdk/: index.html
guides/stackone-integration/: index.html
guides/super-cli/: index.html
guides/superspec/: index.html
guides/superspec-agent-building/: index.html
guides/superspec-configuration/: index.html
guides/superspec-context-engineering/: index.html
guides/superspec-dsl-examples/: index.html
guides/superspec-dsl-reference/: index.html
guides/technical-architecture/: index.html
guides/tool-development/: index.html
guides/troubleshooting-by-symptom/: index.html
guides/vllm-inference/: index.html
guides/weights-biases-integration/: index.html
introduction/: index.html
javascripts/: extra.js
llm-setup/: index.html
mission-superoptix/: index.html
project-structure/: index.html
quick-start/: index.html
search/: search_index.json
setup/: index.html
superagentic-ai/: index.html
superoptix/: __init__.py
superoptix/adapters/: __init__.py  framework_registry.py  stackone_adapter.py
superoptix/cli/: main.py  utils.py
superoptix/compiler/: agent_compiler.py  dspy_generator.py
superoptix/core/: optimizer_factory.py  pipeline_utils.py  validation.py
superoptix/datasets/: loader.py  validators.py
superoptix/memory/: context_manager.py
superoptix/models/: tier_system.py  utils.py
superoptix/optimizers/: universal_gepa.py
superoptix/tools/: base.py  (+2 more)
techniques/: index.html
tests/: test_agenspy_protocols.py  test_cli.py  test_dspy_runner_pipeline_detection.py  test_enhanced_observability.py  test_memory_system.py  test_optimizer_factory.py  test_pipeline_integration.py
troubleshooting/: index.html
tutorials/: index.html
(+137 files in other folders)
